--- a/front-end/src/containers/MenuModal/styles.scss
+++ b/front-end/src/containers/MenuModal/styles.scss
@@ -68,7 +68,7 @@
 
         .div-menu-info {
           text-align: center;
-          padding: 0 40px;
+          padding: 0 30px;
           width: 33%;
 
           span {
